<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroActivity"
    android:background="#fff"
    android:fontFamily="@font/inter">

    <FrameLayout
        android:id="@+id/Elipse1"
        android:layout_width="750dp"
        android:layout_height="1220dp"
        android:alpha="0.85"
        android:background="@drawable/gradiante1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/Elipse2"
        android:layout_width="750dp"
        android:layout_height="1220dp"
        android:background="@drawable/gradient2"
        android:alpha="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContenedor"
        android:layout_width="345dp"
        android:layout_height="640dp"
        app:cardCornerRadius="12dp"
        app:strokeColor="#FFF"
        app:strokeWidth="2dp"
        app:cardBackgroundColor="#80FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contenedor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/Elipse3"
                android:layout_width="640dp"
                android:layout_height="1220dp"
                android:background="@drawable/gradiante3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <FrameLayout
                android:id="@+id/Elipse4"
                android:layout_width="640dp"
                android:layout_height="1220dp"
                android:background="@drawable/gradiante3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btns"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/correo"
                    android:text="@string/user"
                    android:textColor="#5C5C5C" />

                <EditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/correo"
                    android:textColor="#858585"
                    app:layout_constraintTop_toBottomOf="@id/user"
                    app:layout_constraintBottom_toTopOf="@id/pass"
                    android:background="@drawable/input"
                    android:paddingVertical="4sp"
                    android:paddingStart="16sp"
                    android:layout_marginVertical="8sp"/>

                <TextView
                    android:id="@+id/pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pass"
                    app:layout_constraintTop_toBottomOf="@id/correo"
                    app:layout_constraintBottom_toTopOf="@id/password"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="#5C5C5C" />
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/pass_toggle"
                    android:textColor="#858585"
                    app:endIconMode="password_toggle"
                    app:layout_constraintTop_toBottomOf="@id/pass"
                    app:layout_constraintBottom_toTopOf="@id/nombre"
                    android:background="@drawable/input"
                    android:paddingVertical="4sp"
                    android:paddingStart="16sp"
                    android:layout_marginVertical="8sp"/>

                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password"
                    app:layout_constraintBottom_toTopOf="@id/name"
                    android:text="@string/name"
                    android:textColor="#5C5C5C" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="#858585"
                    app:layout_constraintTop_toBottomOf="@id/nombre"
                    app:layout_constraintBottom_toTopOf="@id/titulo"
                    android:background="@drawable/input"
                    android:paddingVertical="4sp"
                    android:paddingStart="16sp"
                    android:layout_marginVertical="8sp"/>

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo"
                    app:layout_constraintTop_toBottomOf="@id/name"
                    app:layout_constraintBottom_toTopOf="@id/title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="#5C5C5C" />
                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="#858585"
                    app:layout_constraintTop_toBottomOf="@id/titulo"
                    app:layout_constraintBottom_toTopOf="@id/profile"
                    android:background="@drawable/input"
                    android:paddingVertical="4sp"
                    android:paddingStart="16sp"
                    android:layout_marginVertical="8sp"/>

                <TextView
                    android:id="@+id/profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textColor="#5C5C5C"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/imgbtn"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/imgbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/upload"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/button_selector"
                    android:paddingHorizontal="35dp"
                    android:layout_marginVertical="16dp"
                    android:backgroundTint="@null"
                    app:backgroundTint="@null"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputs"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/volver"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toStartOf="@id/registrar"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="16sp"
                    android:text="@string/volver"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/button_selector"
                    android:paddingHorizontal="35dp"
                    android:layout_marginHorizontal="16dp"
                    android:backgroundTint="@null"
                    app:backgroundTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registrar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toEndOf="@id/volver"
                    android:textSize="16sp"
                    android:text="@string/registrar"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/button_selector"
                    android:paddingHorizontal="35dp"
                    android:layout_marginHorizontal="16dp"
                    android:backgroundTint="@null"
                    app:backgroundTint="@null" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>