<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.LoginActivity"
    android:background="#fff"
    android:fontFamily="@font/inter" >

    <FrameLayout
        android:id="@+id/Elipse1"
        android:layout_width="750dp"
        android:layout_height="1220dp"
        android:alpha="0.85"
        android:background="@drawable/gradiante1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/Elipse2"
        android:layout_width="750dp"
        android:layout_height="1220dp"
        android:background="@drawable/gradient2"
        android:alpha="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContenedor"
        android:layout_width="345dp"
        android:layout_height="640dp"
        app:cardCornerRadius="12dp"
        app:strokeColor="#FFF"
        app:strokeWidth="2dp"
        app:cardBackgroundColor="#80FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contenedor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/Elipse3"
                android:layout_width="640dp"
                android:layout_height="1220dp"
                android:background="@drawable/gradiante3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <FrameLayout
                android:id="@+id/Elipse4"
                android:layout_width="640dp"
                android:layout_height="1220dp"
                android:background="@drawable/gradiante3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <FrameLayout
                android:id="@+id/logo"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:background="@drawable/logoincade"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/text"
                android:alpha="0.85" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/inputs">

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/ingreso"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/login"
                    android:textColor="#092562"
                    android:textSize="36sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/ingreso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/login"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/ingreso"
                    android:textColor="#5C5C5C"
                    android:textSize="16sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text"
                app:layout_constraintBottom_toTopOf="@id/buttons"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/correo"
                    android:text="@string/user"
                    android:textColor="#5C5C5C" />

                <EditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/correo"
                    android:textColor="#858585"
                    app:layout_constraintTop_toBottomOf="@id/user"
                    app:layout_constraintBottom_toTopOf="@id/pass"
                    android:background="@drawable/input"
                    android:paddingVertical="4sp"
                    android:paddingStart="16sp"
                    android:layout_marginVertical="8sp"/>

                <TextView
                    android:id="@+id/pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pass"
                    app:layout_constraintTop_toBottomOf="@id/correo"
                    app:layout_constraintBottom_toTopOf="@id/pass_toggle"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="#5C5C5C" />
                <EditText
                    android:id="@+id/pass_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@string/pass_toggle"
                    android:textColor="#858585"
                    app:endIconMode="password_toggle"
                    app:layout_constraintTop_toBottomOf="@id/pass"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/input"
                    android:paddingVertical="4sp"
                    android:paddingStart="16sp"
                    android:layout_marginVertical="8sp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/inputs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/signin">

                <Button
                    android:id="@+id/ingresar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/ingresar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/lineas"
                    android:background="@drawable/button_selector"
                    android:backgroundTint="@null"
                    app:backgroundTint="@null" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lineas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/ingresar"
                    app:layout_constraintBottom_toTopOf="@id/btns"
                    android:layout_marginVertical="26dp">

                    <View
                        android:id="@+id/linea"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="#FFFFFF"
                        android:layout_marginStart="4dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/or"/>

                    <TextView
                        android:id="@+id/or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or"
                        android:layout_marginHorizontal="16dp"
                        android:textColor="#5C5C5C"
                        app:layout_constraintStart_toEndOf="@id/linea"
                        app:layout_constraintEnd_toStartOf="@id/linea2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <View
                        android:id="@+id/linea2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="#FFFFFF"
                        android:layout_marginEnd="4dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/or"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/lineas"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:iconSize="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/btn2"
                        android:background="@drawable/button_selector"
                        app:icon="@drawable/logogmail"
                        app:iconTint="@null"
                        android:paddingHorizontal="35dp"
                        android:backgroundTint="@null"
                        app:backgroundTint="@null" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:iconSize="24dp"
                        app:layout_constraintStart_toEndOf="@id/btn1"
                        app:layout_constraintEnd_toStartOf="@id/btn3"
                        android:layout_marginHorizontal="16dp"
                        android:background="@drawable/button_selector"
                        app:icon="@drawable/logofacebuki"
                        app:iconTint="@null"
                        android:paddingHorizontal="33dp"
                        android:backgroundTint="@null"
                        app:backgroundTint="@null"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:iconSize="26dp"
                        app:layout_constraintStart_toEndOf="@id/btn2"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@drawable/button_selector"
                        app:icon="@drawable/logoapple"
                        app:iconTint="@null"
                        android:paddingHorizontal="31dp"
                        android:backgroundTint="@null"
                        app:backgroundTint="@null"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signin"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttons"
                android:layout_marginHorizontal="24dp"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nocount"
                    android:paddingHorizontal="4dp"/>

                <TextView
                    android:id="@+id/registrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registra"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingHorizontal="4dp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>